# canshu_db

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  database.db  database.db.bak  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
docs/: handover-mini-program.md  history.md  ops.md  plans.md  references.md  spec.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Highlight.tsx
frontend/src/pages/: ImportPage.tsx  SearchPage.tsx
scripts/: import_data.py
src/: api.py  app.py  config.py  db.py  extractor.py  importer.py  search.py
tests/: test_api.py  test_search.py
数据库_副本/: D6K-D6KH应用配套方案.xlsx  Midas应用配套方案.xls  Pro2应用配套方案.xls  国内材料技术参数.xls  应用配套方案部分汇总20250729.xlsx  注册证拿证情况概览-20251231.xlsx  设备光强信息汇总.xlsx  设备参数信息汇总.xls
