[project]
name = "aftersales-param-search"
version = "0.1.0"
description = "售后工程师参数搜索工具"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "pymysql>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = []
